web/book/tests/snapshots/snapshot__queries__functions-2.snap
---
source: web/book/tests/snapshot.rs
expression: "let interp = low:0 high x -> (x - low) / (high - low)\n\nfrom students\nderive [\n  sat_proportion_1 = (sat_score | interp 1600),\n  sat_proportion_2 = (sat_score | interp low:0 1600),\n]\n"
---
SELECT
  *,
  (sat_score - 0) / 1600 AS sat_proportion_1,
  (sat_score - 0) / 1600 AS sat_proportion_2
FROM
  students

