web/book/tests/snapshots/snapshot__queries__functions-3.snap
---
source: web/book/tests/snapshot.rs
expression: "func fahrenheit_to_celsius temp -> (temp - 32) / 1.8\n\nfrom cities\nderive temp_c = (temp_f | fahrenheit_to_celsius)\n"
---
SELECT
  *,
  (temp_f - 32) / 1.8 AS temp_c
FROM
  cities

