web/book/tests/snapshots/snapshot__queries__functions-4.snap
---
source: web/book/tests/snapshot.rs
expression: "let fahrenheit_to_celsius = temp -> (temp - 32) / 1.8\nfunc interp low:0 high x -> (x - low) / (high - low)\n\nfrom kettles\nderive boiling_proportion = (temp_c | fahrenheit_to_celsius | interp 100)\n"
---
SELECT
  *,
  ((temp_c - 32) / 1.8 - 0) / 100 AS boiling_proportion
FROM
  kettles

