web/book/tests/snapshots/snapshot__queries__pipelines-0.snap
---
source: web/book/tests/snapshot.rs
expression: "from employees\n"
---
SELECT
  *
FROM
  employees

